--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
+  },
+  "watchOptions": {
+    "watchFile": "priorityPollingInterval",
+    "watchDirectory": "fixedPollingInterval",
+    "fallbackPolling": "dynamicPriority"
   }
 }
